2010-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (sub_dirs): Removed, former ptexdir/lib/ is now
	integrated into lib/.
	* configure.ac (ptexdir/lib/Makefile.am): Removed.

2010-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* help.h (PBIBTEXHELP, PDVITYPEHELP, PPLTOTFHELP, PTFTOPLHELP):
	Moved from from ptexdir/ptexhelp.h.
	* texmfmp-help.h (PTEXHELP): Moved from ptexdir/ptexextra.in.
	* texmfmp.h [PTEX]: Define TEXMFPOOLNAME and TEXMFENGINENAME, and
	#include "ptexdir/kanji.h".

2010-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Removed LT_LIB_DLLOAD, added check for dlfcn.h.
	May require '-ldl' for dlopen() for luaTeX only (not everyone).

2010-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (sub_dirs): New variable, such that ptexdir/lib/
	for the pTeX programs is (re-)built early.

2010-04-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* triptrap-sh [pTeX]: Generate ptrip.diffs.

2010-04-11  Karl Berry  <karl@tug.org>

	* ac/web2c.ac (kpse_tex_progs): add ptex.
	* configure.ac (KPSE_PTEXENC_FLAGS): invoke new macro.
	(AC_CONFIG_FILES): generate ptexdir/lib/Makefile
	* Makefile.am: include $(srcdir)/ptexdir/am/ptex.am.
	* lib/texmfmp.c [pTeX]: various pTeX conditionals.
	* texmfmp-help.h [pTeX]: pTeX options.

2010-04-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tangle.ch: Check and correct module numbers.

	* dvitype.ch, gftodvi.ch, gftopk.ch, gftype.ch, mf.ch, mft.ch,
	pktogf.ch, pktype.ch, pltotf.ch, pooltype.ch, tangle.ch, tex.ch,
	tftopl.ch, vftovp.ch, vptovf.ch, weave.ch: Remove trailing
	whitespace.

2010-04-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/cweb.am (cweave.c): Add dependency on cwebdir/prod.w.

2010-04-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvicopy.ch (dvi_name): New global variable.
	(dvi_length, dvi_move): Use dvi_name instead of 'dvicopy' as
	last arg of xfseek() and xftell().
	No random reading on stdin, may be not seekable.