@@ -1,3 +1,7 @@
+2010-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* coerce.h: Remove luaTeX specific code.
+
 2010-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* convert, splitup.c: Remove luatex.
